syntax = "proto3";

option go_package = "/api;api";

// id, userid, name, subid
service Notes{
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
    string name = 1;
    int64 sub_id = 2;
}

message CreateResponse {
    int64 id = 1;
    int64 user_id = 2;
    string name = 3;
    int64 sub_id = 4;
}

message ReadRequest {
    // id записи
    int64 id = 1;
}

message ReadResponse {
    message Topics{
        int64 id = 1;
        int64 user_id = 2;
        string name = 3;
        int64 sub_id = 4;
    }
    repeated Topics topics = 1;
}

message UpdateRequest {
    int64 id = 1;
    string name = 2;
    int64 sub_id = 3;
}

message UpdateResponse {
    int64 id = 1;
    int64 user_id = 2;
    string name = 3;
    int64 sub_id = 4;
}

message DeleteRequest{
    message MultiDelete {
        int64 id = 1;
        string name = 2;
    }
    repeated MultiDelete md = 1;
}

message DeleteResponse {
    repeated string message = 1;
}
